# GNSP

./: .gitignore  CLAUDE.md  README.md  gnsp-bootstrap.py  pyproject.toml  requirements.txt
Implementation/: prd.md
configs/: default.yaml
gnsp/: __init__.py  constants.py
gnsp/algebra/: __init__.py
gnsp/automata/: __init__.py  buchi.py  dfa.py  learning.py  ltl.py  nfa.py  timed.py  weighted.py
gnsp/category/: __init__.py  base.py  functor.py  protocol.py  sheaf.py  transformation.py
gnsp/core/: __init__.py  fibonacci.py  fixed_point.py  golden.py  quasicrystal.py
gnsp/detection/: __init__.py
gnsp/network/: __init__.py
gnsp/snn/: __init__.py  decoder.py  encoder.py  network.py  neuron.py  simulator.py  stdp.py  synapse.py  topology.py
gnsp/topology/: __init__.py
gnsp/training/: __init__.py
tests/: __init__.py
tests/test_automata/: __init__.py  test_buchi.py  test_dfa.py  test_learning.py  test_ltl.py  test_nfa.py  test_timed.py  test_weighted.py
tests/test_category/: __init__.py  test_base.py  test_functor.py  test_protocol.py  test_sheaf.py  test_transformation.py
tests/test_core/: test_constants.py  test_fibonacci.py  test_fixed_point.py  test_golden.py
tests/test_snn/: __init__.py  test_network.py  test_neuron.py  test_synapse.py
